# murphs-code-repository

./: CMakeLists.txt  ProjectHome.md  README  Zotero.bib
 murphs-code-repository --username matthew.urffer@gmail.com/: ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  layeredPolymer.vcxproj  layeredPolymer.vcxproj.filters  layeredPolymerTracking.sln  run1.mac
 murphs-code-repository --username matthew.urffer@gmail.com/include/: Analysis.hh  DetectorConstruction.hh  Hit.hh  TrackerSD.hh
 murphs-code-repository --username matthew.urffer@gmail.com/layeredPolymerTracking/: ALL_BUILD.vcxproj.filters  CMakeLists.txt
 murphs-code-repository --username matthew.urffer@gmail.com/src/: DetectorConstruction.cc  Hit.cc  SteppingVerbose.cc
ANS2012Presentation/: ANS2012Presentation.tex  Introduction.tex  Methods.tex  SimMethods.tex  SimPerformance.tex  Templates.tex
ANS2012Presentation/images/: CartoonIntEffReal.eps  logo-mcnpx.eps
CHEM_630/: HW1.dvi  HW1.tex.bak  homework.aux  homework.dvi  homework.tex  isotope.aux  isotope.glo  isotope.idx
CHEM_630/HW1/: HW1.ai  HW1.tex
CHEM_630/HW2/: BindingEnergiesNNDC.csv  HW2.ai  HW2.m  HW2.tex  SemiEmpericalMass.m
CHEM_630/HW3/: AtomicWeight.txt  (+2 more)
CS-256/: .nfs00000000042005870000083a  .nfs00000000042005a000000839  ex3ImportData.py  ex3VisData.py  notes.txt
CritSize/: NodeList1.txt  NodeList2.txt  ProcessData.sh  ProcessDataReflector.sh  RUNDATA.sh  RunData.sh  RunDataReflector.sh  ScriptHEUCritSize.mcnp  ScriptLEUCritSize.mcnp  ScriptLEUCritSizeReflector.mcnp  ScriptNatUCritSize.mcnp  ScriptNatUCritSizeReflector.mcnp
G4/: README  val_erange.mac
HDPEModeration/: HDPEModerationOutput.txt  ProcessData.sh  ReadMCNPtallies.py  SCRIPT.mcnp  WattFissionSpectra.py
IncidentFlux/: NeutronAnalysis.xls  README  runPtSrc.sh
MasterThesisPresentation/: 2012-11-2_MasterThesis.tex  CompileLatex.sh  FilmPerformance.tex  Introduction.tex  MasterThesisPresentation.tex  Methods.tex  PSDMethods.tex  PSDPerfomance.tex  PSDPerformance.tex  PulseShapeDiscrim.tex  SimMethods.tex  SimPerformance.tex  Templates.tex  Zotero.bib
MaterialConverter/: CMakeLists.txt  MaterialConverter.cc
NE582MonteCarlo/: CMakeLists.txt  Discrepancy.cc  HaltonSequence.cc  LCG.h  Problem1-6.cc  Problem1-8.cc  Problem1-9.cc  Problem2-2.cc  Problem2-7.cc  slab.for
NE582MonteCarlo/Chapter1/: Makefile  Makefile.arch  Problem1-4.cc  Problem1-9.cc  Problem1-9SampleDepdance.cc  debug.h
NE582MonteCarlo/Chapter2/: HaltonSequence.h  LCG.cc  Makefile  Problem2-1.cc  Problem2-2.cc  Problem2-3.cc  Problem2-3_Pointers.cc  Problem2-4.cc  Problem2-5.cc  Problem2-6.cc  Problem2-8.cc
NE582MonteCarlo/Chapter3/: SimpleMC.m  SimpleMCCollisionEstimator.m  SimpleMCTrackLengthEstimator.m  tracklength.m
NE582MonteCarlo/Chapter5/: Ex5.m  Ex5_5.m  Ex5_6.m  Ex5_7.m  Ex5_8.m  Ex5_9.m
NE582MonteCarlo/Sampling/: Discrepancy.h  LCG.cc  Problem2-5.cc  Problem2-6.cc  simpleMC (shark's conflicted copy 2012-03-10).c  simpleMC.c  tallyTest.c
NE582MonteCarlo/Sampling/include/: event.h  queue.h
NE582MonteCarlo/Sampling/src/: tally.c
NE582MonteCarlo/SimpleMC/: CMakeLists.txt
NE582MonteCarlo/SimpleMC/CPPVersion/: CMakeLists.txt  simpleMC.cc
NE582MonteCarlo/SimpleMC/ISOCVersion/: CMakeLists.txt  simpleMC.c
NE582MonteCarlo/SimpleMC/ISOCVersion/src/: queue.c
NE582MonteCarlo/SimpleMC/include/: csapp.h  tally.h
NE582MonteCarlo/src/: csapp.c
OptEnergyDeposition/: README
P01/: CMakeLists.txt
PbCdNeutronIrridiator/: README
RPM8Optimization/: MCNPXModel.py  README  RUNDATA.sh  SCRIPT.mcnp  costOpt.py  createInputDeck.sh  createSurfaceCells.py  genetic.py  geneticBootstrap.py  geneticEval.py  geneticGeo.py  mctal.py  mergeInputDecks.py  paraseOutput.py  parseOutput.py  parseOutput_OLD.py  queueRunScript.sh  readmctal.py  tallies.tex  tally.py
RangeSim/: range.mac  rangeRuns.mac
SecElectronDistribution/: nSub.qsub  output  subJobs.sh
SingleFilm/: G4History.macro  currentEvent.rndm  currentRun.rndm  polymerFilm.cc  run1.mac  svnDelUnRev.sh  svnUnRev.sh  vis.mac
SingleFilm/SensitiveDetector/: CMakeLists.txt  alphaRun.mac  gammaRun.mac  neutronRun.mac  polymerFilm.cc  vis.mac
SingleFilm/SensitiveDetector/include/: Analysis.hh  CaloHit.hh  CaloSensitiveDetector.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  RunAction.hh  SteppingVerbose.hh
SingleFilm/SensitiveDetector/src/: Analysis.cc  CaloHit.cc  CaloSensitiveDetector.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  RunAction.cc  StackingAction.cc
documentation/: CompileLatex.sh  Makefile  Preamble.tex  PresentationPreamable.tex  Zotero.bib
images/: BF3Test.psd  utwordmark.eps
include/: TrackerHit.hh
layeredEnergyDeposition/: CombineRuns.py  DetectorEDep.C  GNUmakefile  MergeRoot.sh  SecondaryElectrons.C  StatCheck.m  gammaRun.mac  mpiPolymerFilm.cc  pdf2cdf.C  pdf2cdfWeighted.C  polymerFilm.cc  run1.mac
layeredPolymerTracking/: CMakeLists.txt  DetectorEDep.C  G4History.macro  GNUmakefile  GetHistData.C  MergeRoot.sh  PlotHistograms.C  README  analyzeData.C  electronRun.mac  gammaAbsThickness.mac  gammaRun.mac  getHistData.C  mpiPolymerFilm.cc  neutronRun.mac  pdf2cdf.C  pdf2cdfWeighted.C  polymerFilm.cc  psDetectorVal.C  run1.mac  testRun.mac
layeredPolymerTracking/ROOTMacros/: DetectorEDep.C  Makefile  SecondaryElectrons.C  cs137Validation.C
layeredPolymerTracking/ROOTMacros/include/: HistUtilities.hh
layeredPolymerTracking/include/: Analysis.hh  CaloHit.hh  DetectorConstruction.hh  PhysicsList.hh
layeredPolymerTracking/runMacros/: Co60.mac  neutronRun.mac
layeredPolymerTracking/src/: Analysis.cc  CaloSensitiveDetector.cc  DetectorConstruction.cc  EventAction.cc  EventActionMessenger.cc  MaterialConverter.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RootIO.cc  TrackingAction.cc
singleCollisionEnergyLoss/: CMakeLists.txt  analyzeData.C  electronRun.mac  protonRun.mac
src/: RootIO.cc  TrackerSD.cc
waterEnergyDeposition/: CMakeLists.txt  neutronRun.mac
(+4094 files in other folders)
